--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'honbabboard-springboot'
 
+include 'common'
+include 'common:snowflake'
 include 'service'
 include 'service:article'
 include 'service:common'
