--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ allprojects {
 
     dependencies {
 
+        compileOnly 'org.projectlombok:lombok'
+        annotationProcessor 'org.projectlombok:lombok'
+
         testCompileOnly 'org.projectlombok:lombok'
         testAnnotationProcessor 'org.projectlombok:lombok'
 
