--- a/service/comment/src/main/resources/application.yml
+++ b/service/comment/src/main/resources/application.yml
@@ -1,2 +1,15 @@
-server:
-  port: 9001
+server.port: 9001
+spring:
+  application:
+    name: honbab-board-comment-service
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://127.0.0.1:3306/comment?serverTimezone=UTC&characterEncoding=UTF-8
+    username: root
+    password: root
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    open-in-view: false
+    show-sql: true
+    hibernate:
+      ddl-auto: create
